Darktable configuration files.

--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -3,6 +3,7 @@
   For more see: http://kb.mozillazine.org/Using_keyword_searches
 -->
 
+<a href="https://www.abebooks.com/servlet/SearchResults?kn=%s" shortcuturl="abe">AbeBooks</a>
 <a href="https://www.amazon.com/s/?field-keywords=%s" shortcuturl="amazon">Amazon</a>
 <a href="https://encrypted.google.com/search?q=site:link.aps.org+%s" shortcuturl="aps">APS Journals</a>
 <a href="https://encrypted.google.com/search?q=site:arxiv.org+%s+inurl:abs+-inurl:pdf" shortcuturl="arxiv">arXiv</a>
@@ -23,6 +24,7 @@
 <a href="https://encrypted.google.com/search?q=site:forum.mobilism.org+inurl:viewtopic.php+%s" shortcuturl="mobilism">Mobilism</a>
 <a href="https://encrypted.google.com/search?q=site:link.aps.org+inurl:PhysRevE+%s" shortcuturl="pre">Physical Review E</a>
 <a href="https://encrypted.google.com/search?q=site:ncbi.nlm.nih.gov+%s+inurl:pubmed" shortcuturl="pubmed">PubMed</a>
+<a href="https://duckduckgo.com/?kp=-1&q=\+site:rationalwiki.org+%s" shortcuturl="rat">RationalWiki</a>
 <a href="https://dx.doi.org/%s" shortcuturl="doi">Resolve DOI</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:rottentomatoes.com+%s" shortcuturl="rotten">Rotten Tomatoes</a>
 <a href="http://adsabs.harvard.edu/cgi-bin/basic_connect?qsearch=%s&version=1" shortcuturl="ads">SAO/NASA ADS</a>
@@ -37,4 +39,3 @@
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:en.wikiquote.org+%s" shortcuturl="wq">Wikiquote</a>
 <a href="https://www.wolframalpha.com/input/?i=%s" shortcuturl="wa">Wolfram Alpha</a>
 <a href="https://www.youtube.com/results?search_query=%s&safe_search=off&filters=video&lclk=video" shortcuturl="yt">YouTube</a>
-<a href="https://duckduckgo.com/?kp=-1&q=\+site:rationalwiki.org+%s" shortcuturl="rat">RationalWiki</a>
