--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -28,7 +28,7 @@
 <a href="https://dx.doi.org/%s" shortcuturl="doi">Resolve DOI</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:rottentomatoes.com+%s" shortcuturl="rotten">Rotten Tomatoes</a>
 <a href="http://adsabs.harvard.edu/cgi-bin/basic_connect?qsearch=%s&version=1" shortcuturl="ads">SAO/NASA ADS</a>
-<a href="https://sci-hub.hk/%s" shortcuturl="sh">Sci-Hub</a>
+<a href="https://sci-hub.tw/%s" shortcuturl="sh">Sci-Hub</a>
 <a href="https://encrypted.google.com/search?q=site:github.com+OR+site:bitbucket.org+OR+site:gitlab.com+%s" shortcuturl="code">Search GitHub, Bitbucket, etc.</a>
 <a href="https://encrypted.google.com/search?q=site:stackoverflow.com+OR+site:stackexchange.com+%s" shortcuturl="stack">Stackexchange</a>
 <a href="https://encrypted.google.com/search?q=site:serverfault.com+OR+askubuntu.com+OR+superuser.com+%s" shortcuturl="super">Superuser</a>
