--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -3,7 +3,7 @@
   For more see: http://kb.mozillazine.org/Using_keyword_searches
 -->
 
-<a href="https://www.abebooks.com/servlet/SearchResults?kn=%s" shortcuturl="abe">AbeBooks</a>
+<a href="https://www.abebooks.com/servlet/SearchResults?sortby=2&tn=%s" shortcuturl="abe">AbeBooks</a>
 <a href="https://www.amazon.com/s/?field-keywords=%s" shortcuturl="amazon">Amazon</a>
 <a href="https://encrypted.google.com/search?q=site:link.aps.org+%s" shortcuturl="aps">APS Journals</a>
 <a href="https://encrypted.google.com/search?q=site:arxiv.org+%s+inurl:abs+-inurl:pdf" shortcuturl="arxiv">arXiv</a>
