--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -39,3 +39,4 @@
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:en.wikiquote.org+%s" shortcuturl="wq">Wikiquote</a>
 <a href="https://www.wolframalpha.com/input/?i=%s" shortcuturl="wa">Wolfram Alpha</a>
 <a href="https://www.youtube.com/results?search_query=%s&safe_search=off&filters=video&lclk=video" shortcuturl="yt">YouTube</a>
+<a href="https://duckduckgo.com/?kp=-1&q=\+site:last.fm+%s" shortcuturl="lfm">Last.fm</a>
