--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -17,6 +17,7 @@
 <a href="https://scholar.google.com/scholar?q=%s" shortcuturl="gs">Google Scholar</a>
 <a href="https://encrypted.google.com/search?q=%s" shortcuturl="g">Google</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:imdb.com+%s" shortcuturl="imdb">IMDb</a>
+<a href="https://duckduckgo.com/?kp=-1&q=\+site:last.fm+%s" shortcuturl="lfm">Last.fm</a>
 <a href="http://libgen.io/search.php?req=%s" shortcuturl="lg">Library Genesis</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+%s+lyrics" shortcuturl="lyrics">Lyrics Search</a>
 <a href="https://manned.org/browse/search?q=%s" shortcuturl="man">Man Pages</a>
@@ -33,10 +34,10 @@
 <a href="https://encrypted.google.com/search?q=site:stackoverflow.com+OR+site:stackexchange.com+%s" shortcuturl="stack">Stackexchange</a>
 <a href="https://encrypted.google.com/search?q=site:serverfault.com+OR+askubuntu.com+OR+superuser.com+%s" shortcuturl="super">Superuser</a>
 <a href="http://www.thefreedictionary.com/%s" shortcuturl="dict">The Free Dictionary</a>
+<a href="https://thepiratebay.org/search/%s" shortcuturl="tpb">The Pirate Bay</a>
 <a href="http://www.thesaurus.com/browse/%s?s=t" shortcuturl="thes">Thesaurus</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:urbandictionary.com+%s" shortcuturl="urban">Urban Dictionary</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:en.wikipedia.org+%s" shortcuturl="w">Wikipedia</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:en.wikiquote.org+%s" shortcuturl="wq">Wikiquote</a>
 <a href="https://www.wolframalpha.com/input/?i=%s" shortcuturl="wa">Wolfram Alpha</a>
 <a href="https://www.youtube.com/results?search_query=%s&safe_search=off&filters=video&lclk=video" shortcuturl="yt">YouTube</a>
-<a href="https://duckduckgo.com/?kp=-1&q=\+site:last.fm+%s" shortcuturl="lfm">Last.fm</a>
