--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -5,8 +5,8 @@
 
 <a href="https://www.abebooks.com/servlet/SearchResults?sortby=2&tn=%s" shortcuturl="abe">AbeBooks</a>
 <a href="https://www.amazon.com/s/?field-keywords=%s" shortcuturl="amazon">Amazon</a>
-<a href="https://encrypted.google.com/search?q=site:link.aps.org+%s" shortcuturl="aps">APS Journals</a>
-<a href="https://encrypted.google.com/search?q=site:arxiv.org+%s+inurl:abs+-inurl:pdf" shortcuturl="arxiv">arXiv</a>
+<a href="https://www.google.com/search?q=site:link.aps.org+-inurl:pdf+%s" shortcuturl="aps">APS Journals</a>
+<a href="https://www.google.com/search?q=site:arxiv.org+%s+inurl:abs+-inurl:pdf" shortcuturl="arxiv">arXiv</a>
 <a href="http://bookzz.org/s/?q=%s" shortcuturl="bookzz">BookZZ</a>
 <a href="http://www.doi2bib.org/#/doi/%s" shortcuturl="doi2bib">doi2bib</a>
 <a href="https://duckduckgo.com/?q=%s&kad=en_US&kp=-2&kaj=m&kam=google-maps&kae=b&ka=n&kt=n&ks=n&km=l&k5=1" shortcuturl="ddg">DuckDuckGo</a>
@@ -15,24 +15,29 @@
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:genius.com+%s" shortcuturl="genius">Genius</a>
 <a href="https://github.com/search?type=Code&q=%s" shortcuturl="github">GitHub</a>
 <a href="https://scholar.google.com/scholar?q=%s" shortcuturl="gs">Google Scholar</a>
-<a href="https://encrypted.google.com/search?q=%s" shortcuturl="g">Google</a>
+<a href="https://www.google.com/search?q=%s" shortcuturl="g">Google</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:imdb.com+%s" shortcuturl="imdb">IMDb</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:last.fm+%s" shortcuturl="lfm">Last.fm</a>
 <a href="http://libgen.io/search.php?req=%s" shortcuturl="lg">Library Genesis</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+%s+lyrics" shortcuturl="lyrics">Lyrics Search</a>
 <a href="https://manned.org/browse/search?q=%s" shortcuturl="man">Man Pages</a>
-<a href="https://encrypted.google.com/search?q=site:mayoclinic.org+%s" shortcuturl="mayo">Mayo Clinic</a>
-<a href="https://encrypted.google.com/search?q=site:forum.mobilism.org+inurl:viewtopic.php+%s" shortcuturl="mobilism">Mobilism</a>
-<a href="https://encrypted.google.com/search?q=site:link.aps.org+inurl:PhysRevE+%s" shortcuturl="pre">Physical Review E</a>
-<a href="https://encrypted.google.com/search?q=site:ncbi.nlm.nih.gov+%s+inurl:pubmed" shortcuturl="pubmed">PubMed</a>
+<a href="https://www.google.com/search?q=site:mayoclinic.org+%s" shortcuturl="mayo">Mayo Clinic</a>
+<a href="https://www.google.com/search?q=site:forum.mobilism.org+inurl:viewtopic.php+%s" shortcuturl="mobilism">Mobilism</a>
+<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevA+-inurl:pdf+%s" shortcuturl="pra">Physical Review A</a>
+<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevB+-inurl:pdf+%s" shortcuturl="pre">Physical Review B</a>
+<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevC+-inurl:pdf+%s" shortcuturl="pre">Physical Review C</a>
+<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevD+-inurl:pdf+%s" shortcuturl="pre">Physical Review D</a>
+<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevE+-inurl:pdf+%s" shortcuturl="pre">Physical Review E</a>
+<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevLett+-inurl:pdf+%s" shortcuturl="prl">Physical Review Letters</a>
+<a href="https://www.google.com/search?q=site:ncbi.nlm.nih.gov+%s+inurl:pubmed" shortcuturl="pubmed">PubMed</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:rationalwiki.org+%s" shortcuturl="rat">RationalWiki</a>
 <a href="https://dx.doi.org/%s" shortcuturl="doi">Resolve DOI</a>
 <a href="https://duckduckgo.com/?kp=-1&q=\+site:rottentomatoes.com+%s" shortcuturl="rotten">Rotten Tomatoes</a>
 <a href="http://adsabs.harvard.edu/cgi-bin/basic_connect?qsearch=%s&version=1" shortcuturl="ads">SAO/NASA ADS</a>
 <a href="https://sci-hub.tw/%s" shortcuturl="sh">Sci-Hub</a>
-<a href="https://encrypted.google.com/search?q=site:github.com+OR+site:bitbucket.org+OR+site:gitlab.com+%s" shortcuturl="code">Search GitHub, Bitbucket, etc.</a>
-<a href="https://encrypted.google.com/search?q=site:stackoverflow.com+OR+site:stackexchange.com+%s" shortcuturl="stack">Stackexchange</a>
-<a href="https://encrypted.google.com/search?q=site:serverfault.com+OR+askubuntu.com+OR+superuser.com+%s" shortcuturl="super">Superuser</a>
+<a href="https://www.google.com/search?q=site:github.com+OR+site:bitbucket.org+OR+site:gitlab.com+%s" shortcuturl="code">Search GitHub, Bitbucket, etc.</a>
+<a href="https://www.google.com/search?q=site:stackoverflow.com+OR+site:stackexchange.com+%s" shortcuturl="stack">Stackexchange</a>
+<a href="https://www.google.com/search?q=site:serverfault.com+OR+askubuntu.com+OR+superuser.com+%s" shortcuturl="super">Superuser</a>
 <a href="http://www.thefreedictionary.com/%s" shortcuturl="dict">The Free Dictionary</a>
 <a href="https://thepiratebay.org/search/%s" shortcuturl="tpb">The Pirate Bay</a>
 <a href="http://www.thesaurus.com/browse/%s?s=t" shortcuturl="thes">Thesaurus</a>
