Fix bookmark keywords in Firefox.

--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -24,9 +24,9 @@
 <a href="https://www.google.com/search?q=site:mayoclinic.org+%s" shortcuturl="mayo">Mayo Clinic</a>
 <a href="https://www.google.com/search?q=site:forum.mobilism.org+inurl:viewtopic.php+%s" shortcuturl="mobilism">Mobilism</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevA+-inurl:pdf+%s" shortcuturl="pra">Physical Review A</a>
-<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevB+-inurl:pdf+%s" shortcuturl="pre">Physical Review B</a>
-<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevC+-inurl:pdf+%s" shortcuturl="pre">Physical Review C</a>
-<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevD+-inurl:pdf+%s" shortcuturl="pre">Physical Review D</a>
+<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevB+-inurl:pdf+%s" shortcuturl="prd">Physical Review B</a>
+<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevC+-inurl:pdf+%s" shortcuturl="prc">Physical Review C</a>
+<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevD+-inurl:pdf+%s" shortcuturl="prd">Physical Review D</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevE+-inurl:pdf+%s" shortcuturl="pre">Physical Review E</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevLett+-inurl:pdf+%s" shortcuturl="prl">Physical Review Letters</a>
 <a href="https://www.google.com/search?q=site:ncbi.nlm.nih.gov+%s+inurl:pubmed" shortcuturl="pubmed">PubMed</a>
