--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -9,30 +9,30 @@
 <a href="https://www.google.com/search?q=site:arxiv.org+%s+inurl:abs+-inurl:pdf" shortcuturl="arxiv">arXiv</a>
 <a href="http://bookzz.org/s/?q=%s" shortcuturl="bookzz">BookZZ</a>
 <a href="http://www.doi2bib.org/#/doi/%s" shortcuturl="doi2bib">doi2bib</a>
-<a href="https://safe.duckduckgo.com/?q=%s&kad=en_US&kp=-2&kaj=m&kam=google-maps&kae=b&ka=n&kt=n&ks=n&km=l&k5=1" shortcuturl="ddg">DuckDuckGo</a>
+<a href="https://safe.duckduckgo.com/?q=%s&kad=en_US&kaj=m&kam=google-maps&kae=b&ka=n&kt=n&ks=n&km=l&k5=1" shortcuturl="ddg">DuckDuckGo</a>
 <a href="https://www.ebay.com/sch/items/?_nkw=%s" shortcuturl="ebay">eBay</a>
 <a href="https://www.flipkart.com/search?q=%s" shortcuturl="flipkart">Flipkart</a>
-<a href="https://safe.duckduckgo.com/?kp=-1&q=\+site:genius.com+%s" shortcuturl="genius">Genius</a>
+<a href="https://safe.duckduckgo.com/?q=\+site:genius.com+%s" shortcuturl="genius">Genius</a>
 <a href="https://github.com/search?type=Code&q=%s" shortcuturl="github">GitHub</a>
 <a href="https://scholar.google.com/scholar?q=%s" shortcuturl="gs">Google Scholar</a>
 <a href="https://www.google.com/search?q=%s" shortcuturl="g">Google</a>
-<a href="https://safe.duckduckgo.com/?kp=-1&q=\+site:imdb.com+%s" shortcuturl="imdb">IMDb</a>
-<a href="https://safe.duckduckgo.com/?kp=-1&q=\+site:last.fm+%s" shortcuturl="lfm">Last.fm</a>
+<a href="https://safe.duckduckgo.com/?q=\+site:imdb.com+%s" shortcuturl="imdb">IMDb</a>
+<a href="https://safe.duckduckgo.com/?q=\+site:last.fm+%s" shortcuturl="lfm">Last.fm</a>
 <a href="http://libgen.io/search.php?req=%s" shortcuturl="lg">Library Genesis</a>
-<a href="https://safe.duckduckgo.com/?kp=-1&q=\+%s+lyrics" shortcuturl="lyrics">Lyrics Search</a>
+<a href="https://safe.duckduckgo.com/?q=\+%s+lyrics" shortcuturl="lyrics">Lyrics Search</a>
 <a href="https://manned.org/browse/search?q=%s" shortcuturl="man">Man Pages</a>
 <a href="https://www.google.com/search?q=site:mayoclinic.org+%s" shortcuturl="mayo">Mayo Clinic</a>
 <a href="https://www.google.com/search?q=site:forum.mobilism.org+inurl:viewtopic.php+%s" shortcuturl="mobilism">Mobilism</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevA+-inurl:pdf+%s" shortcuturl="pra">Physical Review A</a>
-<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevB+-inurl:pdf+%s" shortcuturl="prd">Physical Review B</a>
+<a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevB+-inurl:pdf+%s" shortcuturl="prb">Physical Review B</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevC+-inurl:pdf+%s" shortcuturl="prc">Physical Review C</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevD+-inurl:pdf+%s" shortcuturl="prd">Physical Review D</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevE+-inurl:pdf+%s" shortcuturl="pre">Physical Review E</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevLett+-inurl:pdf+%s" shortcuturl="prl">Physical Review Letters</a>
 <a href="https://www.google.com/search?q=site:ncbi.nlm.nih.gov+%s+inurl:pubmed" shortcuturl="pubmed">PubMed</a>
-<a href="https://safe.duckduckgo.com/?kp=-1&q=\+site:rationalwiki.org+%s" shortcuturl="rat">RationalWiki</a>
+<a href="https://safe.duckduckgo.com/?q=\+site:rationalwiki.org+%s" shortcuturl="rat">RationalWiki</a>
 <a href="https://dx.doi.org/%s" shortcuturl="doi">Resolve DOI</a>
-<a href="https://safe.duckduckgo.com/?kp=-1&q=\+site:rottentomatoes.com+%s" shortcuturl="rotten">Rotten Tomatoes</a>
+<a href="https://safe.duckduckgo.com/?q=\+site:rottentomatoes.com+%s" shortcuturl="rotten">Rotten Tomatoes</a>
 <a href="http://adsabs.harvard.edu/cgi-bin/basic_connect?qsearch=%s&version=1" shortcuturl="ads">SAO/NASA ADS</a>
 <a href="https://sci-hub.tw/%s" shortcuturl="sh">Sci-Hub</a>
 <a href="https://www.google.com/search?q=site:github.com+OR+site:bitbucket.org+OR+site:gitlab.com+%s" shortcuturl="code">Search GitHub, Bitbucket, etc.</a>
@@ -41,8 +41,8 @@
 <a href="http://www.thefreedictionary.com/%s" shortcuturl="dict">The Free Dictionary</a>
 <a href="https://thepiratebay.org/search/%s" shortcuturl="tpb">The Pirate Bay</a>
 <a href="http://www.thesaurus.com/browse/%s?s=t" shortcuturl="thes">Thesaurus</a>
-<a href="https://safe.duckduckgo.com/?kp=-1&q=\+site:urbandictionary.com+%s" shortcuturl="urban">Urban Dictionary</a>
-<a href="https://safe.duckduckgo.com/?kp=-1&q=\+site:en.wikipedia.org+%s" shortcuturl="w">Wikipedia</a>
-<a href="https://safe.duckduckgo.com/?kp=-1&q=\+site:en.wikiquote.org+%s" shortcuturl="wq">Wikiquote</a>
+<a href="https://safe.duckduckgo.com/?q=\+site:urbandictionary.com+%s" shortcuturl="urban">Urban Dictionary</a>
+<a href="https://safe.duckduckgo.com/?q=\+site:en.wikipedia.org+%s" shortcuturl="w">Wikipedia</a>
+<a href="https://safe.duckduckgo.com/?q=\+site:en.wikiquote.org+%s" shortcuturl="wq">Wikiquote</a>
 <a href="https://www.wolframalpha.com/input/?i=%s" shortcuturl="wa">Wolfram Alpha</a>
-<a href="https://www.youtube.com/results?search_query=%s&safe_search=off&filters=video&lclk=video" shortcuturl="yt">YouTube</a>
+<a href="https://www.youtube.com/results?search_query=%s&safe_search=on&filters=video&lclk=video" shortcuturl="yt">YouTube</a>
