Don't sync 'trash' for SU mail.

--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -32,7 +32,7 @@
 <a href="https://www.google.com/search?q=site:ncbi.nlm.nih.gov+%s+inurl:pubmed" shortcuturl="pubmed">PubMed</a>
 <a href="https://safe.duckduckgo.com/?q=\+site:rationalwiki.org+%s" shortcuturl="rat">RationalWiki</a>
 <a href="https://dx.doi.org/%s" shortcuturl="doi">Resolve DOI</a>
-<a href="https://safe.duckduckgo.com/?q=\+site:rottentomatoes.com+%s" shortcuturl="rotten">Rotten Tomatoes</a>
+<a href="https://safe.duckduckgo.com/?q=\+site:rottentomatoes.com+%s" shortcuturl="rt">Rotten Tomatoes</a>
 <a href="http://adsabs.harvard.edu/cgi-bin/basic_connect?qsearch=%s&version=1" shortcuturl="ads">SAO/NASA ADS</a>
 <a href="https://sci-hub.tw/%s" shortcuturl="sh">Sci-Hub</a>
 <a href="https://www.google.com/search?q=site:github.com+OR+site:bitbucket.org+OR+site:gitlab.com+%s" shortcuturl="code">Search GitHub, Bitbucket, etc.</a>
