--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -8,6 +8,7 @@
 <a href="https://www.google.com/search?q=site:link.aps.org+-inurl:pdf+%s" shortcuturl="aps">APS Journals</a>
 <a href="https://www.google.com/search?q=site:arxiv.org+%s+inurl:abs+-inurl:pdf" shortcuturl="arxiv">arXiv</a>
 <a href="http://bookzz.org/s/?q=%s" shortcuturl="bookzz">BookZZ</a>
+<a href="https://www.dictionary.com/browse/%s" shortcuturl="d">Dictionary.com</a>
 <a href="http://www.doi2bib.org/#/doi/%s" shortcuturl="doi2bib">doi2bib</a>
 <a href="https://duckduckgo.com/?q=%s&kp=-2&kae=b&kaj=m&kam=google-maps" shortcuturl="ddg">DuckDuckGo</a>
 <a href="https://www.ebay.com/sch/items/?_nkw=%s" shortcuturl="ebay">eBay</a>
@@ -29,6 +30,7 @@
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevD+-inurl:pdf+%s" shortcuturl="prd">Physical Review D</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevE+-inurl:pdf+%s" shortcuturl="pre">Physical Review E</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevLett+-inurl:pdf+%s" shortcuturl="prl">Physical Review Letters</a>
+<a href="https://pinboard.in/search/?query=%s&mine=Search+Mine" shortcuturl="pb">Pinboard</a>
 <a href="https://www.google.com/search?q=site:ncbi.nlm.nih.gov+%s+inurl:pubmed" shortcuturl="pubmed">PubMed</a>
 <a href="https://duckduckgo.com/?q=\+site:rationalwiki.org+%s" shortcuturl="rat">RationalWiki</a>
 <a href="https://dx.doi.org/%s" shortcuturl="doi">Resolve DOI</a>
@@ -38,7 +40,6 @@
 <a href="https://www.google.com/search?q=site:github.com+OR+site:bitbucket.org+OR+site:gitlab.com+%s" shortcuturl="code">Search GitHub, Bitbucket, etc.</a>
 <a href="https://www.google.com/search?q=site:stackoverflow.com+OR+site:stackexchange.com+%s" shortcuturl="stack">Stackexchange</a>
 <a href="https://www.google.com/search?q=site:serverfault.com+OR+askubuntu.com+OR+superuser.com+%s" shortcuturl="super">Superuser</a>
-<a href="http://www.thefreedictionary.com/%s" shortcuturl="dict">The Free Dictionary</a>
 <a href="https://thepiratebay.org/search/%s" shortcuturl="tpb">The Pirate Bay</a>
 <a href="http://www.thesaurus.com/browse/%s?s=t" shortcuturl="thes">Thesaurus</a>
 <a href="https://duckduckgo.com/?q=\+site:urbandictionary.com+%s" shortcuturl="urban">Urban Dictionary</a>
