--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -6,6 +6,7 @@
 <a href="https://www.abebooks.com/servlet/SearchResults?sortby=2&tn=%s" shortcuturl="abe">AbeBooks</a>
 <a href="https://www.amazon.com/s/?field-keywords=%s" shortcuturl="amazon">Amazon</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+-inurl:pdf+%s" shortcuturl="aps">APS Journals</a>
+<a href="https://duckduckgo.com/?q=\+site:wiki.archlinux.org+%s" shortcuturl="aw">ArchWiki</a>
 <a href="https://www.google.com/search?q=site:arxiv.org+%s+inurl:abs+-inurl:pdf" shortcuturl="arxiv">arXiv</a>
 <a href="http://bookzz.org/s/?q=%s" shortcuturl="bookzz">BookZZ</a>
 <a href="https://www.dictionary.com/browse/%s" shortcuturl="d">Dictionary.com</a>
