--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -36,6 +36,7 @@
 <a href="https://duckduckgo.com/?q=\+site:rationalwiki.org+%s" shortcuturl="rat">RationalWiki</a>
 <a href="https://dx.doi.org/%s" shortcuturl="doi">Resolve DOI</a>
 <a href="https://duckduckgo.com/?q=\+site:rottentomatoes.com+%s" shortcuturl="rt">Rotten Tomatoes</a>
+<a href="https://rutracker.org/forum/tracker.php?nm=%s" shortcuturl="ru">RuTracker</a>
 <a href="http://adsabs.harvard.edu/cgi-bin/basic_connect?qsearch=%s&version=1" shortcuturl="ads">SAO/NASA ADS</a>
 <a href="https://sci-hub.tw/%s" shortcuturl="sh">Sci-Hub</a>
 <a href="https://www.google.com/search?q=site:github.com+OR+site:bitbucket.org+OR+site:gitlab.com+%s" shortcuturl="code">Search GitHub, Bitbucket, etc.</a>
@@ -43,6 +44,7 @@
 <a href="https://www.google.com/search?q=site:serverfault.com+OR+askubuntu.com+OR+superuser.com+%s" shortcuturl="super">Superuser</a>
 <a href="https://thepiratebay.org/search/%s" shortcuturl="tpb">The Pirate Bay</a>
 <a href="http://www.thesaurus.com/browse/%s?s=t" shortcuturl="thes">Thesaurus</a>
+<a href="https://www.torrentleech.org/torrents/browse/index/query/%s" shortcuturl="tl">Torrent Leech</a>
 <a href="https://duckduckgo.com/?q=\+site:urbandictionary.com+%s" shortcuturl="urban">Urban Dictionary</a>
 <a href="https://duckduckgo.com/?q=\+site:en.wikipedia.org+%s" shortcuturl="w">Wikipedia</a>
 <a href="https://duckduckgo.com/?q=\+site:en.wikiquote.org+%s" shortcuturl="wq">Wikiquote</a>
