--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -5,6 +5,7 @@
 
 <a href="https://www.abebooks.com/servlet/SearchResults?sortby=2&tn=%s" shortcuturl="abe">AbeBooks</a>
 <a href="https://www.amazon.com/s/?field-keywords=%s" shortcuturl="amazon">Amazon</a>
+<a href="https://aapt.scitation.org/action/doSearch?SeriesKey=ajp&AllField=%s" shortcuturl="ajp">American Journal of Physics</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+-inurl:pdf+%s" shortcuturl="aps">APS Journals</a>
 <a href="https://duckduckgo.com/?q=\+site:wiki.archlinux.org+%s" shortcuturl="aw">ArchWiki</a>
 <a href="https://www.google.com/search?q=site:arxiv.org+%s+inurl:abs+-inurl:pdf" shortcuturl="arxiv">arXiv</a>
@@ -20,7 +21,7 @@
 <a href="https://www.google.com/search?q=%s" shortcuturl="g">Google</a>
 <a href="https://duckduckgo.com/?q=\+site:imdb.com+%s" shortcuturl="imdb">IMDb</a>
 <a href="https://duckduckgo.com/?q=\+site:last.fm+%s" shortcuturl="lfm">Last.fm</a>
-<a href="http://libgen.io/search.php?req=%s" shortcuturl="lg">Library Genesis</a>
+<a href="http://gen.lib.rus.ec/search.php?req=%s" shortcuturl="lg">Library Genesis</a>
 <a href="https://duckduckgo.com/?q=\+%s+lyrics" shortcuturl="lyrics">Lyrics Search</a>
 <a href="https://manned.org/browse/search?q=%s" shortcuturl="man">Man Pages</a>
 <a href="https://www.google.com/search?q=site:mayoclinic.org+%s" shortcuturl="mayo">Mayo Clinic</a>
