--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -51,3 +51,4 @@
 <a href="https://duckduckgo.com/?q=\+site:en.wikiquote.org+%s" shortcuturl="wq">Wikiquote</a>
 <a href="https://www.wolframalpha.com/input/?i=%s" shortcuturl="wa">Wolfram Alpha</a>
 <a href="https://www.youtube.com/results?search_query=%s&safe_search=on&filters=video&lclk=video" shortcuturl="yt">YouTube</a>
+<a href="https://syracuse.summon.serialssolutions.com/search?q=%s" shortcuturl="lib">SU Library</a>
