New search bookmarks.

--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -24,6 +24,7 @@
 <a href="http://gen.lib.rus.ec/search.php?req=%s" shortcuturl="lg">Library Genesis</a>
 <a href="https://duckduckgo.com/?q=\+%s+lyrics" shortcuturl="lyrics">Lyrics Search</a>
 <a href="https://manned.org/browse/search?q=%s" shortcuturl="man">Man Pages</a>
+<a href="https://duckduckgo.com/?q=\+site:mathworld.wolfram.com+%s" shortcuturl="mw">MathWorld</a>
 <a href="https://www.google.com/search?q=site:mayoclinic.org+%s" shortcuturl="mayo">Mayo Clinic</a>
 <a href="https://www.google.com/search?q=site:forum.mobilism.org+inurl:viewtopic.php+%s" shortcuturl="mobilism">Mobilism</a>
 <a href="https://www.google.com/search?q=site:link.aps.org+inurl:PhysRevA+-inurl:pdf+%s" shortcuturl="pra">Physical Review A</a>
@@ -42,6 +43,7 @@
 <a href="https://sci-hub.tw/%s" shortcuturl="sh">Sci-Hub</a>
 <a href="https://www.google.com/search?q=site:github.com+OR+site:bitbucket.org+OR+site:gitlab.com+%s" shortcuturl="code">Search GitHub, Bitbucket, etc.</a>
 <a href="https://www.google.com/search?q=site:stackoverflow.com+OR+site:stackexchange.com+%s" shortcuturl="stack">Stackexchange</a>
+<a href="https://syracuse.summon.serialssolutions.com/search?q=%s" shortcuturl="lib">SU Library</a>
 <a href="https://www.google.com/search?q=site:serverfault.com+OR+askubuntu.com+OR+superuser.com+%s" shortcuturl="super">Superuser</a>
 <a href="https://thepiratebay.org/search/%s" shortcuturl="tpb">The Pirate Bay</a>
 <a href="http://www.thesaurus.com/browse/%s?s=t" shortcuturl="thes">Thesaurus</a>
@@ -51,4 +53,3 @@
 <a href="https://duckduckgo.com/?q=\+site:en.wikiquote.org+%s" shortcuturl="wq">Wikiquote</a>
 <a href="https://www.wolframalpha.com/input/?i=%s" shortcuturl="wa">Wolfram Alpha</a>
 <a href="https://www.youtube.com/results?search_query=%s&safe_search=on&filters=video&lclk=video" shortcuturl="yt">YouTube</a>
-<a href="https://syracuse.summon.serialssolutions.com/search?q=%s" shortcuturl="lib">SU Library</a>
