New search bookmark.

--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -48,6 +48,7 @@
 <a href="https://thepiratebay.org/search/%s" shortcuturl="tpb">The Pirate Bay</a>
 <a href="http://www.thesaurus.com/browse/%s?s=t" shortcuturl="thes">Thesaurus</a>
 <a href="https://www.torrentleech.org/torrents/browse/index/query/%s" shortcuturl="tl">Torrent Leech</a>
+<a href="https://torrentz2.eu/search?f=%s" shortcuturl="tor">Torrent2.eu</a>
 <a href="https://duckduckgo.com/?q=\+site:urbandictionary.com+%s" shortcuturl="urban">Urban Dictionary</a>
 <a href="https://duckduckgo.com/?q=\+site:en.wikipedia.org+%s" shortcuturl="w">Wikipedia</a>
 <a href="https://duckduckgo.com/?q=\+site:en.wikiquote.org+%s" shortcuturl="wq">Wikiquote</a>
