Firefox: new bookmarks.

--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -10,6 +10,7 @@
 <a href="https://duckduckgo.com/?q=\+site:wiki.archlinux.org+%s" shortcuturl="aw">ArchWiki</a>
 <a href="https://www.google.com/search?q=site:arxiv.org+%s+inurl:abs+-inurl:pdf" shortcuturl="arxiv">arXiv</a>
 <a href="http://bookzz.org/s/?q=%s" shortcuturl="bookzz">BookZZ</a>
+<a href="https://packages.debian.org/search?keywords=%s&searchon=names&suite=stable&section=all" shortcuturl="deb">Debian Package Search</a>
 <a href="https://www.dictionary.com/browse/%s" shortcuturl="d">Dictionary.com</a>
 <a href="http://www.doi2bib.org/#/doi/%s" shortcuturl="doi2bib">doi2bib</a>
 <a href="https://duckduckgo.com/?q=%s&kp=-2&kae=b&kaj=m&kam=google-maps" shortcuturl="ddg">DuckDuckGo</a>
@@ -48,7 +49,7 @@
 <a href="https://thepiratebay.org/search/%s" shortcuturl="tpb">The Pirate Bay</a>
 <a href="http://www.thesaurus.com/browse/%s?s=t" shortcuturl="thes">Thesaurus</a>
 <a href="https://www.torrentleech.org/torrents/browse/index/query/%s" shortcuturl="tl">Torrent Leech</a>
-<a href="https://torrentz2.eu/search?f=%s" shortcuturl="tor">Torrent2.eu</a>
+<a href="https://torrentz2.is/search?f=%s" shortcuturl="tor">Torrentz2</a>
 <a href="https://duckduckgo.com/?q=\+site:urbandictionary.com+%s" shortcuturl="urban">Urban Dictionary</a>
 <a href="https://duckduckgo.com/?q=\+site:en.wikipedia.org+%s" shortcuturl="w">Wikipedia</a>
 <a href="https://duckduckgo.com/?q=\+site:en.wikiquote.org+%s" shortcuturl="wq">Wikiquote</a>
