--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -9,20 +9,18 @@
 <a href="https://www.google.com/search?q=site:link.aps.org+-inurl:pdf+%s" shortcuturl="aps">APS Journals</a>
 <a href="https://duckduckgo.com/?q=\+site:wiki.archlinux.org+%s" shortcuturl="aw">ArchWiki</a>
 <a href="https://www.google.com/search?q=site:arxiv.org+%s+inurl:abs+-inurl:pdf" shortcuturl="arxiv">arXiv</a>
-<a href="http://bookzz.org/s/?q=%s" shortcuturl="bookzz">BookZZ</a>
 <a href="https://packages.debian.org/search?keywords=%s&searchon=names&suite=stable&section=all" shortcuturl="deb">Debian Package Search</a>
 <a href="https://www.dictionary.com/browse/%s" shortcuturl="d">Dictionary.com</a>
 <a href="http://www.doi2bib.org/#/doi/%s" shortcuturl="doi2bib">doi2bib</a>
 <a href="https://duckduckgo.com/?q=%s&kp=-2&kae=b&kaj=m&kam=google-maps" shortcuturl="ddg">DuckDuckGo</a>
 <a href="https://www.ebay.com/sch/items/?_nkw=%s" shortcuturl="ebay">eBay</a>
-<a href="https://www.flipkart.com/search?q=%s" shortcuturl="flipkart">Flipkart</a>
 <a href="https://duckduckgo.com/?q=\+site:genius.com+%s" shortcuturl="genius">Genius</a>
 <a href="https://github.com/search?type=Code&q=%s" shortcuturl="github">GitHub</a>
 <a href="https://scholar.google.com/scholar?q=%s" shortcuturl="gs">Google Scholar</a>
 <a href="https://www.google.com/search?q=%s" shortcuturl="g">Google</a>
 <a href="https://duckduckgo.com/?q=\+site:imdb.com+%s" shortcuturl="imdb">IMDb</a>
 <a href="https://duckduckgo.com/?q=\+site:last.fm+%s" shortcuturl="lfm">Last.fm</a>
-<a href="http://gen.lib.rus.ec/search.php?req=%s" shortcuturl="lg">Library Genesis</a>
+<a href="http://libgen.is/search.php?req=%s" shortcuturl="lg">Library Genesis</a>
 <a href="https://duckduckgo.com/?q=\+%s+lyrics" shortcuturl="lyrics">Lyrics Search</a>
 <a href="https://manned.org/browse/search?q=%s" shortcuturl="man">Man Pages</a>
 <a href="https://duckduckgo.com/?q=\+site:mathworld.wolfram.com+%s" shortcuturl="mw">MathWorld</a>
@@ -39,17 +37,13 @@
 <a href="https://duckduckgo.com/?q=\+site:rationalwiki.org+%s" shortcuturl="rat">RationalWiki</a>
 <a href="https://dx.doi.org/%s" shortcuturl="doi">Resolve DOI</a>
 <a href="https://duckduckgo.com/?q=\+site:rottentomatoes.com+%s" shortcuturl="rt">Rotten Tomatoes</a>
-<a href="https://rutracker.org/forum/tracker.php?nm=%s" shortcuturl="ru">RuTracker</a>
 <a href="http://adsabs.harvard.edu/cgi-bin/basic_connect?qsearch=%s&version=1" shortcuturl="ads">SAO/NASA ADS</a>
-<a href="https://sci-hub.tw/%s" shortcuturl="sh">Sci-Hub</a>
+<a href="https://sci-hub.se/%s" shortcuturl="sh">Sci-Hub</a>
 <a href="https://www.google.com/search?q=site:github.com+OR+site:bitbucket.org+OR+site:gitlab.com+%s" shortcuturl="code">Search GitHub, Bitbucket, etc.</a>
 <a href="https://www.google.com/search?q=site:stackoverflow.com+OR+site:stackexchange.com+%s" shortcuturl="stack">Stackexchange</a>
 <a href="https://syracuse.summon.serialssolutions.com/search?q=%s" shortcuturl="lib">SU Library</a>
 <a href="https://www.google.com/search?q=site:serverfault.com+OR+askubuntu.com+OR+superuser.com+%s" shortcuturl="super">Superuser</a>
-<a href="https://thepiratebay.org/search/%s" shortcuturl="tpb">The Pirate Bay</a>
 <a href="http://www.thesaurus.com/browse/%s?s=t" shortcuturl="thes">Thesaurus</a>
-<a href="https://www.torrentleech.org/torrents/browse/index/query/%s" shortcuturl="tl">Torrent Leech</a>
-<a href="https://torrentz2.is/search?f=%s" shortcuturl="tor">Torrentz2</a>
 <a href="https://duckduckgo.com/?q=\+site:urbandictionary.com+%s" shortcuturl="urban">Urban Dictionary</a>
 <a href="https://duckduckgo.com/?q=\+site:en.wikipedia.org+%s" shortcuturl="w">Wikipedia</a>
 <a href="https://duckduckgo.com/?q=\+site:en.wikiquote.org+%s" shortcuturl="wq">Wikiquote</a>
