firefox: more configuration to handle more BS

--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -39,6 +39,7 @@
 <DT><A HREF="https://www.google.com/search?hl=en&q=site:serverfault.com+OR+askubuntu.com+OR+superuser.com+%s" SHORTCUTURL="super">Superuser</A>
 <DT><A HREF="https://www.google.com/search?hl=en&q=site:stackoverflow.com+OR+site:stackexchange.com+%s" SHORTCUTURL="stack">Stackexchange</A>
 <DT><A HREF="https://www.google.com/search?hl=en&q=%s" SHORTCUTURL="g">Google</A>
+<DT><A HREF="https://www.perplexity.ai/?s=o&q=%s" SHORTCUTURL="p">Perplexity</A>
 <DT><A HREF="https://www.powerthesaurus.org/%s/synonyms" SHORTCUTURL="thes">Thesaurus</A>
 <DT><A HREF="https://www.wolframalpha.com/input/?i=%s" SHORTCUTURL="wa">Wolfram Alpha</A>
 <DT><A HREF="https://www.youtube.com/results?search_query=%s&safe_search=on&filters=video&lclk=video" SHORTCUTURL="yt">YouTube</A>
