--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -38,7 +38,7 @@
 <DT><A HREF="https://www.google.com/search?hl=en&q=site:ncbi.nlm.nih.gov+%s+inurl:pubmed" SHORTCUTURL="pubmed">PubMed</A>
 <DT><A HREF="https://www.google.com/search?hl=en&q=site:serverfault.com+OR+askubuntu.com+OR+superuser.com+%s" SHORTCUTURL="super">Superuser</A>
 <DT><A HREF="https://www.google.com/search?hl=en&q=site:stackoverflow.com+OR+site:stackexchange.com+%s" SHORTCUTURL="stack">Stackexchange</A>
-<DT><A HREF="https://www.google.com/search?hl=en&q=%s" SHORTCUTURL="g">Google</A>
+<DT><A HREF="https://www.google.com/search?hl=en&udm=14&tbs=li:1&q=%s" SHORTCUTURL="g">Google</A>
 <DT><A HREF="https://www.perplexity.ai/?s=o&q=%s" SHORTCUTURL="p">Perplexity</A>
 <DT><A HREF="https://www.powerthesaurus.org/%s/synonyms" SHORTCUTURL="thes">Thesaurus</A>
 <DT><A HREF="https://www.wolframalpha.com/input/?i=%s" SHORTCUTURL="wa">Wolfram Alpha</A>
