--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -44,4 +44,5 @@
 <DT><A HREF="https://www.wolframalpha.com/input/?i=%s" SHORTCUTURL="wa">Wolfram Alpha</A>
 <DT><A HREF="https://www.youtube.com/results?search_query=%s&safe_search=on&filters=video&lclk=video" SHORTCUTURL="yt">YouTube</A>
 <DT><A HREF="http://www.doi2bib.org/#/doi/%s" SHORTCUTURL="doi2bib">doi2bib</A>
+<DT><A HREF="https://www.google.com/maps/search/?api=1&query=%s&hl=en" SHORTCUTURL="mp">Google Maps</A>
 </DL>
