--- a/firefox/.mozilla/firefox/profile/bookmarks.html
+++ b/firefox/.mozilla/firefox/profile/bookmarks.html
@@ -38,11 +38,11 @@
 <DT><A HREF="https://www.google.com/search?hl=en&q=site:ncbi.nlm.nih.gov+%s+inurl:pubmed" SHORTCUTURL="pubmed">PubMed</A>
 <DT><A HREF="https://www.google.com/search?hl=en&q=site:serverfault.com+OR+askubuntu.com+OR+superuser.com+%s" SHORTCUTURL="super">Superuser</A>
 <DT><A HREF="https://www.google.com/search?hl=en&q=site:stackoverflow.com+OR+site:stackexchange.com+%s" SHORTCUTURL="stack">Stackexchange</A>
-<DT><A HREF="https://www.google.com/search?hl=en&udm=14&tbs=li:1&filter=0&q=%s" SHORTCUTURL="g">Google</A>
+<DT><A HREF="https://www.google.com/search?hl=en&udm=14&&filter=0&q=%s" SHORTCUTURL="g">Google</A>
 <DT><A HREF="https://www.perplexity.ai/?s=o&q=%s" SHORTCUTURL="p">Perplexity</A>
 <DT><A HREF="https://www.powerthesaurus.org/%s/synonyms" SHORTCUTURL="thes">Thesaurus</A>
 <DT><A HREF="https://www.wolframalpha.com/input/?i=%s" SHORTCUTURL="wa">Wolfram Alpha</A>
 <DT><A HREF="https://www.youtube.com/results?search_query=%s&safe_search=on&filters=video&lclk=video" SHORTCUTURL="yt">YouTube</A>
 <DT><A HREF="http://www.doi2bib.org/#/doi/%s" SHORTCUTURL="doi2bib">doi2bib</A>
-<DT><A HREF="https://www.google.com/maps/search/?api=1&query=%s&hl=en" SHORTCUTURL="mp">Google Maps</A>
+<DT><A HREF="https://www.google.com/maps/search/?api=1&query=%s&hl=en" SHORTCUTURL="maps">Google Maps</A>
 </DL>
